# torch-nested

./: .pre-commit-config.yaml  README.md  setup.cfg
.github/workflows/: test.yml
src/torch_nested/: __init__.py  nested_size.py  nested_tensors.py  signals_hasattr_tensors.py  size.py  str_repr.py  tensors.py  type_definitions.py  type_signals.py
tests/: conftest.py  test_signals.py  test_size.py  test_str_repr.py  test_tensors.py  test_tensors_dunders.py  test_torch_nested.py
tests/fixtures/: classes.py  input_data.py
tests/size_outputs/: repr.out  repr_dim0.out  repr_dim1.out  repr_dim2.out  repr_dim3.out  str.out  str_dim0.out  str_dim1.out  str_dim2.out  str_dim3.out
tests/tensors_output/: repr.out  str.out
